# crossout

./: .gitignore  README.md  item.json  main.py  pyproject.toml
crossout/: CrossoutDB.py  CrossoutDBAPI.py  Item.py  __init__.py  objects.py  utils.py
crossoutapi/: CrossoutDBAPI.py  Item.py  __init__.py  utils.py
src/crossout/: objects.py
